--- a/composer.json
+++ b/composer.json
@@ -68,15 +68,15 @@
     }
   },
   "require": {
-    "php": "^8.2"
+    "php": "^8.1"
   },
   "require-dev": {
     "captainhook/captainhook": "^5.25",
     "ext-pdo": "*",
-    "fakerphp/faker": "^1.24.1",
-    "laravel/pint": "^1.25.1",
-    "orchestra/testbench": "^10.6.0",
-    "phpunit/phpunit": "^12.3.12",
+    "fakerphp/faker": "^1.24",
+    "laravel/pint": "1.20.0",
+    "orchestra/testbench": "^8",
+    "phpunit/phpunit": "^10",
     "ramsey/conventional-commits": "^1.6"
   },
   "scripts": {
