--- a/.github/workflows/coverall.yml
+++ b/.github/workflows/coverall.yml
@@ -36,7 +36,5 @@ jobs:
         run: composer coverage
       - name: Upload coverage results to Coveralls
         env:
-            COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-        run: |
-            composer global require php-coveralls/php-coveralls
-            php-coveralls --coverage_clover=./phpunit-clover.xml -v
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: vendor/bin/php-coveralls --coverage_clover=./phpunit-clover.xml -v
